# Solana-Accelerate

./: .gitignore
project-1/: package-lock.json
project-1/anchor/: Anchor.toml
project-1/anchor/programs/counter/src/: lib.rs
project-1/anchor/programs/journal/: Cargo.toml
project-1/anchor/programs/journal/src/: lib.rs
project-2-anchor-client/: Anchor.toml  package-lock.json
project-2-anchor-client/programs/project-2-anchor-client/: Cargo.toml
project-2-anchor-client/programs/project-2-anchor-client/src/: lib.rs
project-2-anchor-client/tests/: project-2-anchor-client.ts
project-3-pdas/: Anchor.toml
project-3-pdas/programs/new-crud-app/: Cargo.toml
project-3-pdas/programs/new-crud-app/src/: lib.rs
project-3-pdas/tests/: new-crud-app.ts
project-5/agent-kit-mcp-server/: .gitignore  claude_desktop_config.json  package.json  pnpm-lock.yaml
